--- a/app/src/main/res/layout/path_measure_layout.xml
+++ b/app/src/main/res/layout/path_measure_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.example.wangjiawang.customview.widget.PathMeasureView
+    <com.example.wangjiawang.customview.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
