--- a/app/src/main/res/layout/region_layout.xml
+++ b/app/src/main/res/layout/region_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.example.wangjiawang.customview.widget.RegionClickView
+    <com.example.wangjiawang.customview.widget.DragView
         android:id="@+id/region_click_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
